force-app/main/default/objects/DC_Inside_Plant__c/DC_Inside_Plant__c.object-meta.xml
<CustomObject>
    <label>Inside Plant</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inside Plants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>