force-app/main/default/objects/DC_Inside_Plant__c/fields/A_Side_Data_Hall__c.field-meta.xml
<CustomField>
    <fullName>A_Side_Data_Hall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the space that the Inside Plant is originating from.</description>
    <label>A-Side - Data Hall</label>
    <referenceTo>DC_Data_Hall__c</referenceTo>
    <relationshipLabel>Inside Plants</relationshipLabel>
    <relationshipName>Inside_Plants</relationshipName>
    <type>Lookup</type>
</CustomField>