force-app/main/default/objects/DC_Inside_Plant__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Asset allocated to this Inside Plant.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Inside Plants</relationshipLabel>
    <relationshipName>Inside_Plants</relationshipName>
    <type>Lookup</type>
</CustomField>