force-app/main/default/objects/DC_Inside_Plant__c/fields/Related_MRI_Suite_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_MRI_Suite_ID__c</fullName>
    <description>The MRI Suite ID related to this Inside Plant.</description>
    <label>Related MRI Suite ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>