force-app/main/default/objects/DC_Inside_Plant__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of Inside Plant connecting areas of the Building.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conduit</fullName>
            </value>
            <value>
                <fullName>Riser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>