force-app/main/default/objects/DC_Inside_Plant__c/fields/Z_Side_Data_Hall__c.field-meta.xml
<CustomField>
    <fullName>Z_Side_Data_Hall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the space that the Inside Plant is trying to get to.</description>
    <label>Z-Side - Data Hall</label>
    <referenceTo>DC_Data_Hall__c</referenceTo>
    <relationshipLabel>Inside Plants (Z-Side - Data Hall)</relationshipLabel>
    <relationshipName>Inside_Plants1</relationshipName>
    <type>Lookup</type>
</CustomField>