force-app/main/default/objects/DC_Inside_Plant__c/fields/Z_Side_Type__c.field-meta.xml
<CustomField>
    <fullName>Z_Side_Type__c</fullName>
    <description>What type of space is the Inside Plant trying to get to.</description>
    <label>Z-Side Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Datahall</fullName>
            </value>
            <value>
                <fullName>Tenant Suite</fullName>
            </value>
            <value>
                <fullName>POE Allocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>